aesthetic bit at the beginning of discussion

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2315,7 +2315,7 @@ affects neutral expectations of genealogical heterogeneity across chromosomes.
 % what do our results mean overall.
 A primary result of our work is solving the mechanistic link between a given species tree 
 and the length of a genomic interval representing a single genealogy 
-(i.e. the waiting distance until a genealogy change). 
+(i.e. calculating the expected waiting distance until a genealogy change). 
 With our analytical results it is clear how MSC parameters of divergence times and 
 effective population sizes influence these waiting distances, most obviously 
 by constraining the number and identity of available lineages and by determining 
