--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2322,19 +2322,23 @@ by constraining the number and identity of available lineages and by determining
 the coalescence rate in each branch of the species tree. 
 These parameters also affect the rate of recombination events along the genome, since the 
 number of recombination events per base pair is dependent on the total branch 
-lengths of the underlying genealogies. By preventing coalescence between select lineages, 
+length of each underlying genealogy. By preventing coalescence between select lineages forward in time, 
 species tree divergence events enforce minimum branch lengths for the genealogies, 
-increasing the number of recombination events per base pair. Similarly, variation in Ne 
-affects the per-base-pair recombination rate, since coalescences farther back in time 
+increasing the number of recombination events per base pair. Similarly, by affecting coalescence rates, variation in Ne 
+affects the per-base-pair recombination rate. This is because coalescences farther back in time 
+(expected to be more common if Ne is large)
 increase the total branch lengths of the genealogies.
-Topological and sampling parameters can also affect the expected distances until genealogy 
-changes -- including tree shape, tree size (i.e. number of tips), and the distribution of samples among species tree 
-lineages. These factors all exert their influence through the same general mechanisms: affecting the 
+Topological and sampling parameters, including tree shape, tree size (i.e. number of tips), 
+and the distribution of samples among species tree 
+lineages, can also affect the expected distances until genealogy 
+changes. These factors all exert their influence via the same general mechanisms as above: affecting the 
 probability of coalescence among certain lineages by constraining the availability of those lineages 
-for coalescence with each other in each segment of the species tree, and by influencing the 
+for coalescence with each other within the species tree, and by influencing the 
 rate of recombination by affecting the total branch length of the genealogies. 
 Taken together, it is clear that the scale at which we observe neutral turnover across 
-genealogies is highly dependent on the species tree model. 
+genealogies is highly dependent on the species tree model. The potential 
+intricacy of this species tree model alongside potential variation in individual genealogies 
+can lead to genealogical turnover (and therefore, linkage) patterns that are highly complex. 
 %Because of low levels of incomplete lineage sorting, highly 
 %structured models might have much longer waiting distances than single-population models. 
 Previously, the expected linkage in phylogenetic datasets could only be computed 
