--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1162,7 +1162,6 @@ The function $f(i,j$) will reappear in later equations.
 		% 
 		\frac{1}{k_j} \left(1 - \exp \bigg\{ -\frac{k_j}{2n_j} d_j \bigg\} 
 		\right)
-		% \times
 		\exp \bigg\{ -\frac{k_i}{2n_i}\mu_i - 
 		\sum_{q \in \mathcal{Q}_b(i,j)} \frac{k_q}{2n_q} d_q \bigg \}, 
 		& \text{if } i\ne j\\
@@ -1251,10 +1250,10 @@ we get the probability that a recombination event occurring anywhere on
 $\mathcal{G}$ will result in a no-change event. %category 1 outcome.
 
 \begin{equation}
-	\mathbb{P}(\textrm{no-change} | \mathcal{S},\mathcal{G}) = 
+	\mathbb{P}(\text{no-change} | \mathcal{S},\mathcal{G}) = 
 	\sum_{b \in \mathcal{G}}
 	\left[\frac{t^u_b - t^l_b}{L(\mathcal{G})}\right]
-	\mathbb{P}(\textrm{no-change} | \mathcal{S},\mathcal{G},b)
+	\mathbb{P}(\text{no-change} | \mathcal{S},\mathcal{G},b)
 \end{equation}
 
 
@@ -1384,11 +1383,10 @@ time is lengthened. A re-coalescence with any other branch will change the topol
 % calculated the probability of a no-change event, we now calculate this probability 
 % in addition to the probability of a change that affects only coalescent times and not the topology. 
 To index over relevant intervals across the three branches on which re-coalescence
-can occur we define several additional variables. The lowest interval in which both 
+can occur we define several additional variables. The lowest time point in which both 
 $b$ and $b'$ are present and exist within the same species tree interval is labeled 
-$m$, and the lower boundary of this interval as $t_b^m$. For a branch $b$ with 
-intervals $\mathcal{I}_b$, the subset of intervals below $m$ is 
-as $\mathcal{L}_b$, and the subset including $m$ and above is $\mathcal{M}_b$. 
+$t_b^m$. For a branch $b$ with intervals $\mathcal{I}_b$, the subset of intervals 
+below $t_b^m$ is $\mathcal{L}_b$, and the subset above is $\mathcal{M}_b$. 
 The union of the sets of intervals on branches $b$ and $c$ is $\mathcal{I}_{bc}$
 (Fig.~\ref{fig:fig3}e).
 % \hl{however, we additionally incorporate changing coalescent rates 
@@ -1628,14 +1626,14 @@ uniformly on the genealogy will result in a topology-unchanged event.
 
 \begin{equation}
 \begin{aligned}
-	&\mathbb{P}(\textrm{topology-unchanged} | \mathcal{S},\mathcal{G}) = 
+	&\mathbb{P}(\textrm{topology-unchanged} | \mathcal{S},\mathcal{G})
 	% \\
-	&\sum_{b \in \mathcal{G}}\frac{t_b^u - t_b^l}{L(\mathcal{G})} 
+	= \sum_{b \in \mathcal{G}}\frac{t_b^u - t_b^l}{L(\mathcal{G})} 
 	\times 
-	\mathbb{P}(\textrm{topology-unchanged} | \mathcal{S},\mathcal{G},b) =
+	\mathbb{P}(\textrm{topology-unchanged} | \mathcal{S},\mathcal{G},b)
 	\\
 	&
-	\frac{1}{L(\mathcal{G})} \sum_{b \in \mathcal{G}}
+	= \frac{1}{L(\mathcal{G})} \sum_{b \in \mathcal{G}}
 	\bigg[ 
 		\sum_{i \in \mathcal{L}_b} p_{b,1}^{(i)} +
 		\sum_{i \in \mathcal{M}_b} p_{b,2}^{(i)}
@@ -2758,9 +2756,9 @@ event separating them.
 	$t_b^l$        & The lower boundary of branch $b$, in generations. \\
 	$t_b^u$        & The upper boundary of branch $b$, in generations. \\
 	$t_b^m$        & The time at which a focal branch $b$ is able to coalesce with its sibling branch. \\
-	$m$            & Index of an interval in the genealogy embedding table with lower boundary $t_b^m$. \\
-	$\mathcal{M}_b$  & Ordered set of intervals from $m$ and above on branch $b$.\\
-	$\mathcal{L}_b$  & Ordered set of intervals below $m$ on branch $b$.\\	
+	% $m$            & Index of an interval in the genealogy embedding table with lower boundary $t_b^m$. \\
+	$\mathcal{M}_b$  & Ordered set of intervals above $t_b^m$ on branch $b$.\\
+	$\mathcal{L}_b$  & Ordered set of intervals below $t_b^m$ on branch $b$.\\	
 	% $\mathcal{I}_b$  & The number of intervals containing branch $b$. \\
 	\bottomrule
 \end{tabular}
@@ -3284,6 +3282,7 @@ scaled by the probabilities of either recombination event type.
 % \end{aligned}
 % \end{equation}
 
+
 \subsection{Probability of topology change}
 Next, we derive the probability of a topology-unchanged event, from which
 we can get the probability of a topology-change event. 
@@ -3294,30 +3293,21 @@ To isolate events that do not cause a topology change requires finding
 the union of events that cause a no-change event in addition to two 
 possible tree-change events which affect only branch lengths but not the 
 topology. These two events correspond to a re-coalescence with the 
-sister to branch $b$, referred to as $b'$, or with its parent, referred to 
-as $c$. Because the branch $c$ is always ancestral to $b$, a recombination
+sister to branch $b$, termed $b'$, or with its parent, $c$ (Fig.~\ref{fig:fig3}d).
+Because branch $c$ is always ancestral to $b$, a recombination
 event on $b$ can potentially re-coalesce anywhere on $c$; however, 
 this is not the case for $b'$, which may only exist or be available for 
 re-coalescence over part of the length of $b$. It is therefore important 
 to define the lowest time point at which re-coalescence with $b'$ is 
-possible, which we term $t_b^m$. 
+possible, termed $t_b^m$. 
 
-In the single population model of \citet{deng_distribution_2021} 
+In the single population model of \citet{deng_distribution_2021}, 
 $t_b^m$ occurs at the maximum value of $t_b^l$ and $t_{b'}^l$, 
-representing the lower bounds of $b$ and $b'$. 
-In an MSC model we must incorporate additional possible constraints 
-imposed by population barriers, and so $t_b^m$ occurs the maximum
-of $t_b^l$, $t_{b'}^l$, 
-
-this time point as the maximum value of three potential time points, 
-to 
-points are the lower bound of $b'$ (Fig.~\ref{fig:figS-tbm}b), 
-the 
-is more complex since population barriers can impose additional 
-constraints. Instead, we use the maximum value of $t_b^l$, $t_{b,b'}^w$, 
-and $t_{b'}^l$ 
-
-... Define $\mathcal{M}$ and $\mathcal{L}$. 
+representing the lower bounds of $b$ and $b'$, respectively. 
+In our MSC-based model we must also incorporate potential 
+constraints imposed by population barriers, and so $t_b^m$ occurs at 
+the maximum of $t_b^l$, $t_{b'}^l$, and any population divergence 
+events ($W$) that separate $b$ and $b'$ (Fig.~\ref{fig:figS-tbm}a-c).
 
 
 \begin{figure}[t]
@@ -3347,54 +3337,75 @@ and $t_{b'}^l$
 % $t_{b'}^l$, $t_{b}^l$, and $t_{(b,b')}^w$, which we define as the merging time 
 % for the species tree branches separating $b$ and $b'$ (Figure-supplement).
 
+\subsubsection{Given a branch and time of recombination}
 Using the definition for $t_b^m$ from above, we can describe the probability
 of a topology-unchanged event given the branch and time of recombination
-as a two-part solution. ALSO DO EQUAL TO. 
-If $t_r$ > $t_b^m$, then re-coalescence can occur
-in three distinct regions, .... Alternatively, if $t_r$ < $t_b^m$, then 
-re-coalescence can only occur in x or y. 
+as a two-part solution. These two parts correspond to scenarios in which
+the time of recombination, $t_r$, occurs either above (Fig.~\ref{fig:figS-tbm}a-c)
+or below (Fig.~\ref{fig:figS-tbm}d-e) $t_b^m$. When $t_r$ $<=$ $t_b^m$, there
+are only two distinct intervals over which re-coalescence can occur: from
+$t_r$ to $t_b^u$ on branches $b$ or $b'$, and from $t_b^u$ to $t_c^u$ on 
+branch $c$ (Fig.~\ref{fig:figS-tbm}a-c). By contrast, when $t_r$ $>$ $t_b^m$
+there are three distinct intervals for re-coalescence: from $t_r$ to $t_b^m$
+on $b$, $t_b^m$ to $t_b^u$ on $b'$, and $t_b^u$ to $t_c^u$ on 
+branch $c$ (Fig.~\ref{fig:figS-tbm}d-e). Thus, in the first scenario 
+the opportunity for re-coalescence is the same for branches $b$ 
+and $b'$, whereas in the latter scenario it is different.
 
 % isn't the tr < tbm part redundant with the next part?
-\hl{In the first case} (Fig.~\ref{fig:fig3}a), where $t_r$ $<$ $t_b^m$ and 
-$t_r \in [\sigma_i, \sigma_{i+1}] \subset [t_b^l,t_b^m]$
-it is necessary to integrate over coalescence probabilities in three distinct 
-sections: from $t_r$ to $t_b^m$, $t_b^m$ to $t_b^u$, and $t_b^u$ to $t_c^u$. 
-(Note, these sections may be composed of multiple genealogy embedding 
-intervals if they contain additional species divergence events).
-The first section is notable for representing the core
-difference between this first case and the second case below. 
-When a recombination event occurs in the first section on $b$ there is a span 
-from $t_r$ to $t_b^m$ where $b$ can re-coalescence with itself but not yet 
-with $b'$, since at least one species divergence event separates them.
-Thus, although re-coalescence can occur in this span of time, it cannot lead to 
-changes in the genealogy. 
-In the second section, 
-$b$ can re-coalesce with $b$ or $b'$, leading to either no change or a tree 
-change (shortened coalesence time). Finally, in the third section $b$ can 
-only re-coalesce with $c$, leading to a tree change that lengthens $b$'s 
-coalescence time. 
-An integration over the probabilities of each allowable 
-event on branch $b$ over all three distinct sections leads to the first
-probability statement below. 
-In the second case (Fig.~\ref{fig:fig3}b), where $t_r$ $>$ $t_b^m$ and 
-$t_r \in [\sigma_i, \sigma_{i+1}] \subset [t_b^m,t_b^u]$, 
-it is only necessary to integrate over probabilities across a subset of the 
-second section, and across the entire third section described above, leading
-to the second statement below:
+% \hl{In the first case} (Fig.~\ref{fig:fig3}a), where $t_r$ $<$ $t_b^m$ and 
+% $t_r \in [\sigma_i, \sigma_{i+1}] \subset [t_b^l,t_b^m]$
+% it is necessary to integrate over coalescence probabilities in three distinct 
+% sections: from $t_r$ to $t_b^m$, $t_b^m$ to $t_b^u$, and $t_b^u$ to $t_c^u$. 
+% (Note, these sections may be composed of multiple genealogy embedding 
+% intervals if they contain additional species divergence events).
+% The first section is notable for representing the core
+% difference between this first case and the second case below. 
+% When a recombination event occurs in the first section on $b$ there is a span 
+% from $t_r$ to $t_b^m$ where $b$ can re-coalescence with itself but not yet 
+% with $b'$, since at least one species divergence event separates them.
+% Thus, although re-coalescence can occur in this span of time, it cannot lead to 
+% changes in the genealogy. 
+% In the second section, 
+% $b$ can re-coalesce with $b$ or $b'$, leading to either no change or a tree 
+% change (shortened coalesence time). Finally, in the third section $b$ can 
+% only re-coalesce with $c$, leading to a tree change that lengthens $b$'s 
+% coalescence time. 
+% An integration over the probabilities of each allowable 
+% event on branch $b$ over all three distinct sections leads to the first
+% probability statement below. 
+% In the second case (Fig.~\ref{fig:fig3}b), where $t_r$ $>$ $t_b^m$ and 
+% $t_r \in [\sigma_i, \sigma_{i+1}] \subset [t_b^m,t_b^u]$, 
+% it is only necessary to integrate over probabilities across a subset of the 
+% second section, and across the entire third section described above, leading
+% to the second statement below:
 
 Retaining the correct order of intervals is important in these calculations, 
 particularly for $f(i,j)$, which involves summing over not only the information
 in the $i$ and $j$ intervals, but also all of the intervals that lie between 
-them. We define $bc$ as the ordered union of the sets of intervals on 
-branches $b$ and $c$ (Fig.~\ref{fig:fig3}c), such that $\mathcal{I}_{bc}$ is 
-the summed number of intervals in this set.
-% that can be used to index ordered intervals in this set.
-Similarly, we define the intersection of the sets of intervals in $b$
-and $b'$ as $bb'$, which includes only intervals in which both of 
-these branches occur (i.e., it excludes intervals where they
-are embedded in separate species tree branches). Finally, we 
-define $m$ as the index of the lowest interval in $bb'$ 
-(occurring at time $t_b^m$) where both $b$ and $b'$ occur. 
+them. To iterate over ordered intervals on each branch we define additional
+indexing variables. Just as $\mathcal{I}_b$ defines the ordered set of intervals 
+on branch $b$, $\mathcal{I}_c$ is the ordered set of intervals on branch $c$, and
+$\mathcal{I}_{bc}$ is the ordered union of these sets. In addition, we define
+$\mathcal{M}_{b}$ as the ordered intervals on branch $b$ above 
+$t_b^m$, and $\mathcal{L}_{b}$ as the ordered intervals on branch $b$ 
+below $t_b^m$.
+We can now derive a probability for the two distinct scenarios:
+
+% As in \citet{deng_distribution_2021}, we break the problem into two cases: a first case in 
+% which $t$ belongs to the interval from the base of the focal branch to $t^m_b$, and a second 
+% case in which $t$ belongs to the interval from $t^m_b$ to $t^u_b$. 
+
+% We define $bc$ as the ordered union of the sets of intervals on 
+% branches $b$ and $c$ (Fig.~\ref{fig:fig3}c), such that $\mathcal{I}_{bc}$ is 
+% the summed number of intervals in this set.
+% % that can be used to index ordered intervals in this set.
+% Similarly, we define the intersection of the sets of intervals in $b$
+% and $b'$ as $bb'$, which includes only intervals in which both of 
+% these branches occur (i.e., it excludes intervals where they
+% are embedded in separate species tree branches). Finally, we 
+% define $m$ as the index of the lowest interval in $bb'$ 
+% (occurring at time $t_b^m$) where both $b$ and $b'$ occur. 
 
 
 %%%%%%%%%%%%%%%%%%%%%% I'm not sure we need this figure anymore, can use maintext fig3.
@@ -3418,9 +3429,53 @@ define $m$ as the index of the lowest interval in $bb'$
 
 
 
+\paragraph{First case --} Given $t_r$ $<$ $t_b^m$, we integrate over the three
+distinct intervals where re-coalescence can occur. The first is unique to branch $b$, 
+the second integral is multiplied by two since from $t_b^m$ to $t_b^u$ re-coalescence
+can occur with $b$ or $b'$, and the final integral is over the length of branch $c$.
+By substituting the piece-wise constant solutions for each interval into this equation
+it can simplifed to the final form below, also shown in equation 11 of the main text:
 
 \begin{equation}
-	\mathbb{P}(\textrm{topology-unchanged} | \mathcal{S}, \mathcal{G}, b) = 
+\begin{aligned}
+	&\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r) \\
+	&= \int_{t_r}^{t_b^m}
+	\frac{1}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau + 
+	\int_{t_b^m}^{t_b^u}
+	\frac{2}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau + 
+	\int_{t_b^u}^{t_c^u} \frac{1}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau \\
+	&= \frac{1}{k_i} + 
+	\sum_{j \in \mathcal{I}_{bc}}	f(i,j) \exp \bigg\{	\frac{k_i}{2n_i} t_r \bigg\} + 
+	\sum_{j \in \mathcal{M}_b}    f(i,j) \exp \bigg\{ \frac{k_i}{2n_i} t_r \bigg\}
+\end{aligned}
+\end{equation}
+
+\paragraph{Second case --} Given $t_r$ $>=$ $t_b^m$, we only need to integrate over
+two distinct intervals, thus we simply drop the first term from the equation above.
+The final form of this equation is also shown in equation 11 of the main text:
+
+\begin{equation}
+\begin{aligned}
+	&\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r) \\
+	&= \int_{t_r}^{t_b^u} \frac{2}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau + 
+	 \int_{t_b^u}^{t_c^u} \frac{1}{\mathcal{K}(b, \tau)} f(\tau - t_r; \lambda) d\tau \\
+	&= 2 \bigg(
+		\frac{1}{k_i} + 
+		\sum_{j \in \mathcal{I}_b} f(i,j) \exp \bigg\{ \frac{k_i}{2n_i} t_r \bigg\}
+	\bigg) + 
+	\sum_{j \in \mathcal{I}_c} f(i,j) \exp \bigg\{ \frac{k_i}{2n_i} t_r \bigg\}
+\end{aligned}
+\end{equation}
+
+\subsubsection{Across a full branch}
+
+Now we derive the overall probability that a recombination event falling on a specific branch will 
+change the topology by integrating across all values for $t_r$.
+Following the approach above, we split this problem into two parts, above and below
+$t_b^m$, and sum the two cases.
+
+\begin{equation}
+	\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b) = 
 	\frac{1}{t_b^u - t_b^l} \int_{t_b^l}^{t_b^u}
 	\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G},b, t_r) dt_r
 \end{equation}
@@ -3436,67 +3491,20 @@ define $m$ as the index of the lowest interval in $bb'$
 	\bigg]
 \end{equation}
 
-\noindent Where $t^m_b=\max\{t^w_{(b,b')},t_{b'}^l,t_b^l\}$.
-
-
-
-\subsubsection{Given a branch and time of recombination}
-
-As in \citet{deng_distribution_2021}, we break the problem into two cases: a first case in 
-which $t$ belongs to the interval from the base of the focal branch to $t^m_b$, and a second 
-case in which $t$ belongs to the interval from $t^m_b$ to $t^u_b$. 
-
-\paragraph{First case --} Given $t \in [\sigma_i, \sigma_{i+1}] \subset [t_b^l,t_{b}^m]$:
-The final solution here is shown as equation XX of the main text. It is an integral 
-over part 1, two times the integral in part 2, since this length exists on both branches
-b and b', and then the integral over part 3. 
-
-\begin{equation}
-\begin{aligned}
-	&\mathbb{P}(\textrm{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r) = \\
-	&\int_{t_r}^{t_b^m}
-	\frac{1}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau + 
-	\int_{t_b^m}^{t_b^u}
-	\frac{2}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau + 
-	\int_{t_b^u}^{t_c^u} \frac{1}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau = \\
-	&\frac{1}{k_i} + 
-	\sum_{j \in \mathcal{I}_{bc}}	f(i,j) \exp \bigg\{	\frac{k_i}{n_i} t_r \bigg\} + 
-	\sum_{j \in \mathcal{M}_b}    f(i,j) \exp \bigg\{ \frac{k_i}{n_i} t_r \bigg\}
-\end{aligned}
-\end{equation}
-
-\paragraph{Second case --} Given $t \in [\sigma_i, \sigma_{i+1}] \subset [t_b^m,t_b^u]$.
-This is similar to the first, but we can eliminate the first integral. The final result
-is shown as equation XX in the main text.
-
-\begin{equation*}
-\begin{aligned}
-	&\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r) = \\
-	&\int_{t_r}^{t_b^u} \frac{2}{\mathcal{K}(b,\tau)} f(\tau - t_r; \lambda) d\tau + 
-	 \int_{t_b^u}^{t_c^u} \frac{1}{\mathcal{K}(b, \tau)} f(\tau - t_r; \lambda) d\tau = \\
-	& 2 \bigg(
-		\frac{1}{k_i} + 
-		\sum_{k \in \mathcal{I}_b} f(i,j) \exp \bigg\{ \frac{k_i}{n_i} t_r \bigg\}
-	\bigg) + 
-	\sum_{j \in \mathcal{I}_c} f(i,j) \exp \bigg\{ \frac{k_i}{n_i} t_r \bigg\}
-\end{aligned}
-\end{equation*}
-
-\subsubsection{Across a full branch}
-
-Now we derive the overall probability that a recombination event falling on a specific branch will 
-change the topology. We integrate across values of $t$ and sum the two cases defined above, while 
-assuming a uniform probability of the recombination event occurring at any time along the branch:
 
 \paragraph{First case --}
+We can now sum over each entire interval below $t_b^m$ where $t_r$ could occur, and 
+substitute piece-wise constant solutions for the probabilities that a detached
+subtree will re-coalesce over the subset of targeted intervals above this that
+do not cause a topology-change.
 
 \begin{equation}
 \begin{aligned}
-	\int_{t_b^l}^{t_b^m} {\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r)} = \\
-	\sum_{i \in \mathcal{M}_b} \frac{1}{k_i} \Bigg[ 
-		d_i + n_i \bigg( 
-			\exp \bigg\{\frac{k_i}{n_i} \mu_i \bigg\} - 
-			\exp \bigg\{\frac{k_i}{n_i} \sigma_i\bigg\} 
+	&\int_{t_b^l}^{t_b^m} {\mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r)} dt_r \\
+	&= \sum_{i \in \mathcal{L}_b} \frac{1}{k_i} \Bigg[ 
+		d_i + 2n_i \bigg( 
+			\exp \bigg\{\frac{k_i}{2n_i} \mu_i \bigg\} - 
+			\exp \bigg\{\frac{k_i}{2n_i} \sigma_i\bigg\} 
 		\bigg)
 		\bigg(
 			\sum_{j \in \mathcal{I}_{bc}} f(i,j) + \sum_{j \in \mathcal{M}_b} f(i,j) 
@@ -3506,14 +3514,16 @@ assuming a uniform probability of the recombination event occurring at any time 
 \end{equation}
 
 \paragraph{Second case --}
+Similarly, we can sum over each entire interval above $t_b^m$ and substitute piece-wise
+constant solutions for the same selected subset of intervals:
 
 \begin{equation}
 \begin{aligned}
-	&\int_{t_b^m}^{t_b^u} \mathbb{P} (\textrm{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r) = \\
-	&\sum_{i \in \mathcal{M}_b} \frac{1}{k_i} \Bigg[ 
-		2d_i + n_i \bigg( 
-			\exp \bigg\{ \frac{k_i}{n_i} \mu_i \bigg\} - 
-			\exp \bigg\{ \frac{k_i}{n_i} \sigma_i \bigg\}
+	&\int_{t_b^m}^{t_b^u} \mathbb{P} (\textrm{topology-unchanged} | \mathcal{S}, \mathcal{G}, b, t_r) dt_r \\
+	&= \sum_{i \in \mathcal{M}_b} \frac{1}{k_i} \Bigg[ 
+		2d_i + 2n_i \bigg( 
+			\exp \bigg\{ \frac{k_i}{2n_i} \mu_i \bigg\} - 
+			\exp \bigg\{ \frac{k_i}{2n_i} \sigma_i \bigg\}
 		\bigg) 
 		\bigg(2 \sum_{j \in \mathcal{I}_b} f(i,j) + \sum_{j \in \mathcal{I}_c} f(i,j) \bigg)
 	\Bigg]
@@ -3521,7 +3531,12 @@ assuming a uniform probability of the recombination event occurring at any time 
 \end{equation}
 
 \paragraph{Result --}
-\begin{equation}
+If we express the inner summed terms from the equations above, composed of piece-wise
+constant values from their intervals, as $p_{b,1}^{(i)}$ and $p_{b,2}^{(i)}$, 
+respectively, then the final solution can be expressed more concisely. 
+This is shown in the main text as equation 12.
+
+\begin{equation}\tag{12}
      \mathbb{P}(\text{topology-unchanged} | \mathcal{S}, \mathcal{G}, b) = 
      \frac{1}{t_b^u - t_b^l} 
      \bigg[ 
@@ -3533,17 +3548,18 @@ assuming a uniform probability of the recombination event occurring at any time 
 
 \subsubsection{Across the whole tree}
 
-Finally, we sum across all branches to find the probability of a recombination event changing the 
-topology of the tree:
+Finally, we sum across all branches, each weighted by their relative length, 
+to find the probability of a recombination event changing the 
+topology of the tree. This appears as equation 13 in the main text.
 
-\begin{equation}
+\begin{equation}\tag{13}
 \begin{aligned}
     &\mathbb{P}(\text{topology-unchanged}| \mathcal{S}, \mathcal{G}) = 
     \sum_{b \in \mathcal{G}}
     \frac{t_b^u - t_b^l}
-    {L(\mathcal{G})} \times \mathbb{P}(\text{topology-unchanged}| \mathcal{S}, \mathcal{G}, b) = \\
+    {L(\mathcal{G})} \times \mathbb{P}(\text{topology-unchanged}| \mathcal{S}, \mathcal{G}, b) \\
     % 
-    & \frac{1}{L(\mathcal{G})} \sum_{b \in \mathcal{G}}
+    & = \frac{1}{L(\mathcal{G})} \sum_{b \in \mathcal{G}}
      \bigg[ 
 	    \sum_{i \in \mathcal{L}_b} p_{b,1}^{(i)} + 
 	    \sum_{i \in \mathcal{M}_b} p_{b,2}^{(i)}
@@ -3551,6 +3567,33 @@ topology of the tree:
 \end{aligned}
 \end{equation}
 
+
+\subsubsection{Examples}
+Examples showing how to compute the probablity of a no-change (tree-unchanged) 
+or topology-change event are shown with didactic step-by-step instructions in 
+Fig.~\ref{fig:figS-tree-equations} and Fig.~\ref{fig:figS-topo-equations}, 
+respectively.
+
+\begin{figure}[p]
+	\centering
+	\includegraphics[width=0.95\textwidth]{figures/verbose-equations}
+	\caption{A step-by-step calculation of the probability of a tree-unchanged 
+	event under the MS-SMC' given a species tree and genealogy.
+	}
+	\label{fig:figS-tree-equations}
+\end{figure}
+
+
+
+
+\begin{figure}[p]
+	\centering
+	\includegraphics[width=0.95\textwidth]{figures/verbose-equations-topology}
+	\caption{A step-by-step calculation of the probability of a topology-unchanged 
+	event under the MS-SMC' given a species tree and genealogy.
+	}
+	\label{fig:figS-topo-equations}
+\end{figure}
 
 
 
@@ -3567,27 +3610,6 @@ topology of the tree:
 % 	in (b) it corresponds to $\sigma_1$.}
 % 	% \label{fig:fig5}
 % \end{figure}
-
-
-\begin{figure}[p]
-	\centering
-	\includegraphics[width=0.95\textwidth]{figures/verbose-equations}
-	\caption{A step-by-step calculation of the probability of a tree-unchanged 
-	event under the MS-SMC' given a species tree and genealogy.
-	}
-	\label{fig:figS-tree-equations}
-\end{figure}
-
-
-\begin{figure}[p]
-	\centering
-	\includegraphics[width=0.95\textwidth]{figures/verbose-equations-topology}
-	\caption{A step-by-step calculation of the probability of a topology-unchanged 
-	event under the MS-SMC' given a species tree and genealogy.
-	}
-	\label{fig:figS-topo-equations}
-\end{figure}
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%% This table doesn't seem necessary.
