--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -3289,14 +3289,14 @@ scaled by the probabilities of either recombination event type.
 
 \subsection{Probability of topology change}
 Next, we derive the probability of a topology-unchanged event, from which
-we can get the probability of a topology-change event. 
-As in the first section, we will first derive a solution for an individual 
-branch and time of recombination, then for an entire branch, and
-finally sum across branches to get a probability for an entire genealogy. 
-To isolate events that do not cause a topology change requires finding
-the union of events that cause a no-change event in addition to two 
+we can get the associated probability of a topology-change event. 
+As in the first section, we first derive a solution given an individual 
+branch and time of recombination. We then extend this solution to an entire branch, and we 
+finally sum across branches to get a probability for the entire genealogy. 
+To isolate events that do not cause a topology change, we must find
+the union of events that cause a no-change event in addition to two types of 
 possible tree-change events which affect only branch lengths but not the 
-topology. These two events correspond to a re-coalescence with the 
+topology. These two types of events correspond to a re-coalescence with the 
 sister to branch $b$, termed $b'$, or with its parent, $c$ (Fig.~\ref{fig:fig3}d).
 Because branch $c$ is always ancestral to $b$, a recombination
 event on $b$ can potentially re-coalesce anywhere on $c$; however, 
