--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2184,8 +2184,8 @@ bias spatial genealogical inference methods.
 	\caption{
 		Joint inference of MSC model parameters using waiting distances 
 		calculated under the MS-SMC'. (a) ARGs were simulated under a two-population 
-		MSC model with variable $N_e$. (b) Posterior distributions of $N_e$ values 
-		inferred for three populations from tree and topology-change waiting 
+		MSC model with variable $N_e$. (b) Posterior distributions of the three 
+		$N_e$ parameters jointly inferred from tree and topology-change waiting 
 		distances.
 	}
 	\label{fig:fig-likelihood-posterior}
@@ -3354,8 +3354,12 @@ events that separate $b$ and $b'$ (Fig.~\ref{fig:figS-tbm}a-c).
 		$b$ leads to a topology change involves summing over the probabilities 
 		that the detached lineage does not re-coalesce with either
 		itself, its sibling, or its parent ($b$, $b'$ or $c$, respectively). 
-		At the time 
-		recombination occurs ($t_r$) the branches $b$ and $b'$ can either exist 
+
+
+		When the timing of recombination ($t_r$) occ
+
+
+		$b$ and $b'$ can either exist 
 		in different species tree intervals (a) or the same interval (b). This 
 		restricts the probability of tree-change outcomes (e.g., shortened coalescent 
 		time) until the lowest shared interval between $b$ and $b'$ at time 
