--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -3361,11 +3361,7 @@ events that separate $b$ and $b'$ (Fig.~\ref{fig:figS-tbm}a-c).
 		$b$ leads to a topology change involves summing over the probabilities 
 		that the detached lineage does not re-coalesce with either
 		itself, its sibling, or its parent ($b$, $b'$ or $c$, respectively). 
-
-
-		When the timing of recombination ($t_r$) occ
-
-
+		When the timing of recombination ($t_r$) occ...
 		$b$ and $b'$ can either exist 
 		in different species tree intervals (a) or the same interval (b). This 
 		restricts the probability of tree-change outcomes (e.g., shortened coalescent 
